# rust-rocket-juniper-mongodb-async

./: .env  Cargo.toml  README.md
src/: main.rs  model.rs  schema.rs
