[package]
name = "slipgate"
version = "0.1.0"
authors = ["Leon East <mail@leoneast.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
rocket = "0.5.0-rc.1"
juniper = "0.15.9"
mongodb = "2.2.1"
juniper_rocket = "0.8.1"
serde_json = "1.0.79"
serde = "1.0.136"
dotenv = "0.15.0"